#Fix: Fix the placement of building components.